--- a/bookshelf.html
+++ b/bookshelf.html
@@ -20,46 +20,80 @@
   </head>
 
   <body>
-    <nav class="navbar-body">
-      <h1>BookBeater</h1>
+    <nav class="vertical-nav pl-4" id="sidebar">
+      <button id="sidebarCollapse" type="button" class="burgerbar-button">
+        <i class="fa fa-bars"></i>
+      </button>
+      <a href="index.html">
+        <img class="readie-logo mb-5" src="./images/ReadieLogo.png" alt="" />
+      </a>
+      <p class="font-weight-bold text-uppercase px-3 small pb-4 mb-0">
+        Dashboards
+      </p>
       <div class="jcc alc f-row add-dashboard">
         <div class="plus-sign">
           <i class="fas fa-plus-circle"></i>
         </div>
         <textarea placeholder="Add a new dashboard"></textarea>
       </div>
-      <ul class="mb-5">
-        <a href="">
-          <li class="active-dashboard">
-            <span><i class="fas fa-brain"></i></span>Psychology
-          </li>
-        </a>
-        <a href="">
-          <li class="inactive-dashboard">
-            <span><i class="far fa-lightbulb"></i></span>Philosophy
-          </li>
-        </a>
-        <a href="">
-          <li class="inactive-dashboard">
-            <span><i class="fas fa-laptop"></i></span>Computers
-          </li>
-        </a>
-        <a href="">
-          <li class="inactive-dashboard">
-            <span><i class="fas fa-user-tie"></i></span>Business
-          </li>
-        </a>
+      <ul class="nav flex-column mb-0">
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <i class="fa fa-th-large mr-3 fa-fw"></i>
+            Subject
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <i class="fa fa-address-card mr-3 fa-fw"></i>
+            Subject
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <i class="fa fa-cubes mr-3 fa-fw"></i>
+            Subject
+          </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">
+            <i class="fa fa-picture-o mr-3 fa-fw"></i>
+            Subject
+          </a>
+        </li>
       </ul>
-      <ul class="mb-5">
-        <a href="">
-          <li class="inactive-dashboard">
-            <span><i class="fas fa-cog"></i></span> Settings
-          </li>
-        </a>
+
+      <p
+        class="
+          text-gray
+          mt-5
+          font-weight-bold
+          text-uppercase
+          px-3
+          small
+          py-4
+          mb-0
+        "
+      >
+        Recent
+      </p>
+
+      <ul class="nav flex-column mb-0">
+        <li class="nav-item">
+          <a href="#" class="nav-link font-italic"> Crime and Punishment </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link font-italic"> Crime and Punishment </a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link font-italic">
+            Crime and Punishment And some long text
+          </a>
+        </li>
+        <a class="login" href="log_in.html"><span>Log out</span></a>
       </ul>
-      <a class="login" href="log_in.html"><span>Log out</span></a>
     </nav>
-    <div class="container-fluid" id="body">
+    <div class="page-content container-fluid" id="content">
       <div class="bookshelf-top-row">
         <h2>Your Bookshelf</h2>
         <div class="row mb-4 search-bar">
