--- a/log_in.html
+++ b/log_in.html
@@ -18,7 +18,7 @@
     <div class="login-left">
       <section class="mx-auto my-auto">
         <img src="./images//bookgiff.gif" alt="">
-        <h3>Organize your</h3>
+        <h3>Manage your</h3>
         <div class="long-btext-cont">
           <h3 id="loginSpan" class="login-btext"></h3>
         </div>
@@ -39,7 +39,7 @@
           <a href="register.html">Need an account? Sign up for free here!</a>
         </form>
         <div class="logo">
-          <img src="images/BookerLogo.png" alt="">
+          <img src="images/ReadieDark@4x.png" alt="">
         </div>
     </div>
   </div>
