--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
     <div class="login-left">
       <section class="mx-auto my-auto">
         <img src="./images//bookgiff.gif" alt="">
-        <h3>Organize your</h3>
+        <h3>Manage your</h3>
         <div class="long-btext-cont">
           <h3 id="loginSpan" class="login-btext"></h3>
         </div>
@@ -43,7 +43,7 @@
           <a href="log_in.html">Already have an account? Sign in here</a>
         </form>
         <div class="logo">
-          <img src="images/BookerLogo.png" alt="">
+          <img src="images/ReadieDark@4x.png" alt="">
         </div>
     </div>
   </div>
